[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyforward_driver"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "html5lib",
    "logzero",
    "lxml",
    "pandas",
    "pytest>=3.0.7",
    "selenium>=4.8.0",
    # "webdriver-manager>=4.0.0",
]
